Fix validation warnings: replace <section> with <div>.

--- a/FLX_homework_1/homework/index.html
+++ b/FLX_homework_1/homework/index.html
@@ -12,10 +12,9 @@
             <div id="main">
                 <div id="container">
                     <div id="content" role="main">
-                        <section id="home">
-                            <header>
-                                <img src="logo.png" alt="EPAM logo" >
-                            </header>
+
+                        <header id="home">
+                            <img src="logo.png" alt="EPAM logo" >
 
                             <h1><b>HTML Elements</b></h1>
                             <hr>
@@ -29,9 +28,10 @@
                                 <a href="#blockquote"><strong>Blockquotes</strong></a>
                             </nav>
                             <hr>
-                        </section>
+                        </header>
 
-                        <section id="headers">
+
+                        <div id="headers">
                             <p>Pay attention to h1 tag inside section element. Font-size for h1 is the same as font-size for h2, because we have to use only one h1 on the page, and it is commonly used inside header</p>
 
                             <h2>Header 2</h2>
@@ -40,16 +40,16 @@
                             <h5>Header 5</h5>
                             <h6>Header 6</h6>
                             <hr>
-                        </section>
+                        </div>
 
-                        <section id="text">
+                        <div id="text">
                             <p>Lorem ipsum dolor sit amet, <a href="">test link</a> adipiscing elit. <strong>This is strong.</strong> Nullam dignissim convallis est. Quisque aliquam. <em>This is emphasized.</em> Donec faucibus. Nunc iaculis suscipit dui. 5<sup>3</sup> = 125. Water is H<sub>2</sub>O. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. <cite>The New York Times</cite> (That’s a citation).<u>Underline.</u> Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
 
                             <p><abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. To copy a file type <kbd>COPY</kbd> <i>filename</i>. <del>Dinner`s at 5:00.</del> <ins>Let’s make that 7.</ins> This <del>text</del> has been struck.</p>
                             <hr>
-                        </section>
+                        </div>
 
-                        <section id="table">
+                        <div id="table">
                             <h2>Table</h2>
                             <table>
                                 <thead>
@@ -77,9 +77,9 @@
                                     </tr>
                                 </tbody>
                             </table>
-                        </section>
+                        </div>
 
-                        <section id="list">
+                        <div id="list">
                             <h2>Unordered List</h2>
                             <ul>
                                 <li>List item 1</li>
@@ -117,9 +117,9 @@
                                 <option value="js">JS</option>
                             </select>
                             <hr>
-                        </section>
+                        </div>
 
-                        <section id="textFormats">
+                        <div id="textFormats">
                             <h2>Text formats</h2>
                             <h3>Article Text</h3>
                             <article>
@@ -147,9 +147,9 @@ justify-content: center;
 }
 
             </code></pre>
-                        </section>
+                        </div>
 
-                        <section id="blockquote">
+                        <div id="blockquote">
                             <h2>Blockquotes</h2>
                             <p>Let’s keep it simple. Italics are good to help set it off from the body text. Be sure to style the citation.</p>
 
@@ -159,10 +159,10 @@ justify-content: center;
                                 <a href="https://en.wikipedia.org/wiki/Elon_Musk">Elon Musk</a>
                             </blockquote>
                             <hr>
-                        </section>
+                        </div>
 
-                        <section id="formData">
-                            <form action="">
+                        <div id="formData">
+                            <form action="/">
                                 <fieldset>
                                     <label for="firstName">First name:</label>
                                     <input type="text" id="firstName" />
@@ -184,7 +184,7 @@ justify-content: center;
 
                                 <button type="submit">Submit</button>
                             </form>
-                        </section>
+                        </div>
 
                         <footer>&copy; Copyright Epam Systems</footer>
 
