--- a/FLX_homework_4/homework/index.html
+++ b/FLX_homework_4/homework/index.html
@@ -37,7 +37,8 @@
 
         <main>
             <div class="bdy-triangle">
-                <h2 align="center">Triangle here</h2>
+                <p class="triangle-rigth">popularised in the 1960s with the release of Letraset sheets containi</p>
+                <p class="triangle-left">popularised in the 1960s with the release of Letraset sheets containi</p>
             </div>
 
             <div class="bdy-under-triangle">
@@ -49,8 +50,7 @@
             <div class="bdy-top">
 
                 <div class="bdy-top-foto">
-                    <img src="" alt="">
-                    <p>Photo here!!!</p>
+                    <img src="img/sample.jpg" alt="ofice" width="400">
                 </div>
 
                 <div class="bdy-top-texts">
@@ -112,11 +112,10 @@
         </main>
 
         <footer>
-            <div class="bg">
+            <div class="footer">
                 <p>eifvbwie fvpwief jiwefpwiefv poopeuhvpwoe poero por poeror</p>
             </div>
-            <span class="glyphicon glyphicon-asterisk"></span>
-            <span class="glyphicon glyphicon-envelope"></span>
+
         </footer>
 
     </body>
