--- a/FLX_homework_4/homework/index.html
+++ b/FLX_homework_4/homework/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Lorem ipsum</title>
         <meta charset="utf-8">
@@ -106,7 +106,7 @@
                 <div class="rightside">
                     <label for="sn">Subscribe to our <b>newsletter</b></label>
                     <input id="sn" type="text" placeholder="Enter you e-mail">
-                    <input class="button-subscribe" type="button" for="sn" value="Subscribe">
+                    <input class="button-subscribe" type="button" value="Subscribe">
                 </div>
             </div>
         </main>
