--- a/FLX_homework_11/homework/index.html
+++ b/FLX_homework_11/homework/index.html
@@ -27,7 +27,7 @@
 
             <footer>
                 <div>
-                    <img src="" alt="ЦЕ ФУТЕР. ТУТ БУДЕ КОТЯЧА ЛАПКА">
+                    <img src="../homework/assets/img/cat.png" alt="ЦЕ ФУТЕР. ТУТ БУДЕ КОТЯЧА ЛАПКА">
                 </div>
             </footer>
         </div>
